--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <div>
     <header>
           <img src="img/logo.png" width="100">
-            <h3>МАГАЗИН</h3>
-            <h3>БЛОГ</h3>
-            <h3>О КОМПАНИИ </h3>
+                <h3>МАГАЗИН</h3>
+                <h3>БЛОГ</h3>
+                <h3>О КОМПАНИИ </h3>
             <img src="img/basket.png" width="50">
     </header>
     </div>
@@ -25,9 +25,7 @@
                  и экологичность.
                  </p>
                 </ul>
-            <ul class="prime">
-                <img src="img/sg2.jpg" width="400">
-            </ul>
+                <img src="img/photo.jpg" width="400">
         </article> 
     <article>
                 <h2>
